refactor: rename clip model key to replicate
